# Rust-Recommender

./: Cargo.toml  README.md
.VSCodeCounter/2023-04-21_20-49-21/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-28_15-36-53/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
GNNmodel/GNN_errorcode/e382/: GNN_B.pth
GNNmodel/GNN_errorcode/e499/: GNN_B.pth
GNNmodel/GNN_errorcode/e502/: GNN_B.pth
GNNmodel/GNN_errorcode/e505/: GNN_B.pth
GNNmodel/GNN_errorcode/e506/: GNN_B.pth
GNNmodel/GNN_errorcode/e507/: GNN_B.pth
GNNmodel/GNN_errorcode/e515/: GNN_B.pth
NN/: BipartiteGraphMatch.py  CodeRecommendation.py  Gmini.py  MyDataset.py  SGNN.py  eval.py  flowChart.py
lib/: Connection.rs  message.rs  socket.rs
spider_stackoverflow/: .gitignore
spider_stackoverflow/src/: .gitignore  aumaentation.ipynb  spider.ipynb
src/: connection.rs  lib.rs  main.rs  message.rs  socket.rs  threads.rs
src/NN/: DataPreprocessing.py  MyDataset.py  SGNN.py  SGNN_datatester.py  SGNN_every_tester.py  SGNN_recommender.py  SGNN_recommender_every_error.py  SGNN_recommender_newtrain.py  a.txt  flowChart.py  icsv.py  time_calculate.py
src/NN/model/: model.py
src/graphcsv/: 1x.csv  2x.csv  3x.csv  4x.csv  5x.csv  foo.csv
src/ide_message/: connection.rs  mod.rs  socket.rs
src/parse/: adjlist.rs  alias_analysis.rs  method_call.rs  mod.rs  parse.txt  parse_var.rs  steengaard.rs  steengrad.rs  test_read.rs  test_read_write.rs  tester.rs
(+3321 files in other folders)
